Домашнее задание № 6 (2) доработка