@@ -1,7 +1,6 @@
 package ru.otus.homework20210421.dao;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.jdbc.core.JdbcOperations;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcOperations;
 import org.springframework.jdbc.support.GeneratedKeyHolder;
@@ -9,8 +8,6 @@ import org.springframework.stereotype.Repository;
 import ru.otus.homework20210421.domain.Genre;
 import ru.otus.homework20210421.util.GenreMapper;
 
-import java.io.Serializable;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -18,13 +15,12 @@ import java.util.Objects;
 @Repository
 @RequiredArgsConstructor
 public class GenreDaoJdbcImpl implements GenreDao {
-    private final JdbcOperations jdbcOperations;
     private final NamedParameterJdbcOperations namedParameterJdbcOperations;
 
     @Override
     public int count() {
-        final var count = jdbcOperations.queryForObject(
-                "select count(*) from genres", Integer.class);
+        final var count = namedParameterJdbcOperations.getJdbcOperations().queryForObject(
+                "select count(id) from genres", Integer.class);
         return count == null ? 0 : count;
     }
 
@@ -42,7 +38,7 @@ public class GenreDaoJdbcImpl implements GenreDao {
 
     @Override
     public void update(Genre genre) {
-        final Map<String, ? extends Serializable> params = Map.of(
+        final Map<String, Object> params = Map.of(
                 "id", genre.getId(),
                 "title", genre.getTitle());
         namedParameterJdbcOperations.update(
@@ -52,26 +48,26 @@ public class GenreDaoJdbcImpl implements GenreDao {
 
     @Override
     public Genre getById(long id) {
-        final Map<String, Object> params = Collections.singletonMap("id", id);
+        final Map<String, Object> params = Map.of("id", id);
         return namedParameterJdbcOperations.queryForObject(
-                "select * from genres where id = :id", params, new GenreMapper());
+                "select id, title from genres where id = :id", params, new GenreMapper());
     }
 
     @Override
     public List<Genre> getByTitle(String pattern) {
-        final Map<String, Object> params = Collections.singletonMap("title", pattern);
+        final Map<String, Object> params = Map.of("title", pattern);
         return namedParameterJdbcOperations.query(
-                "select * from genres where title like :title", params, new GenreMapper());
+                "select id, title from genres where title like :title", params, new GenreMapper());
     }
 
     @Override
     public List<Genre> getAll() {
-        return jdbcOperations.query("select * from genres", new GenreMapper());
+        return namedParameterJdbcOperations.getJdbcOperations().query("select * from genres", new GenreMapper());
     }
 
     @Override
     public void deleteById(long id) {
-        final Map<String, Object> params = Collections.singletonMap("id", id);
+        final Map<String, Object> params = Map.of("id", id);
         namedParameterJdbcOperations.update(
                 "delete from genres where id = :id",
                 params);
